--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <!-- Секция чем мы занимаемся -->
         <section class="our-profile-section">
             <div class="our-profile-container">
-                <h2 class="our-team-second-title">Чем мы занимаемся</h2>
-                <ul class="our-team-list-images">
-                    <li class="our-team-images-img"><img  src="./images/coding.jpg"  alt="Разработчик набирает код"  width="370"/></li>
-                    <li class="our-team-images-img"><img  src="./images/mobile-apps.jpg"  alt="Разработчик тестирует мобильное приложение"  width="370"/></li>
-                    <li class="our-team-images-img"><img  src="./images/web-apps.jpg"  alt="Разработчик тестирует веб приложение"  width="370"/></li>   
+                <h2 class="our-profile-second-title">Чем мы занимаемся</h2>
+                <ul class="our-profile-list-images">
+                    <li class="our-profile-images-img"><img  src="./images/coding.jpg"  alt="Разработчик набирает код"  width="370" height="294"/></li>
+                    <li class="our-profile-images-img"><img  src="./images/mobile-apps.jpg"  alt="Разработчик тестирует мобильное приложение"  width="370" height="294"/></li>
+                    <li class="our-profile-images-img"><img  src="./images/web-apps.jpg"  alt="Разработчик тестирует веб приложение"  width="370" height="294"/></li>   
                 </ul>
             </div>
         </section>
