--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
 <body>
   <!-- Хедер -->
   <header class="header-container">
-    <nav>
-        <div class="nav-container">
+    <div class="container">
+        <nav>
             <a class="logo" href="#"><span class="logo-blue">Web</span>Studio</a>
             <ul class="site-nav-list">
                 <li class="site-nav-item"><a class="site-nav-link" href="index.html">Студия</a></li>
@@ -26,99 +26,115 @@
                 <li class="contacts-list-item"><a class="contacts-list-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="contacts-list-item"><a class="contacts-list-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </div>
-    </nav>
+        </nav>
+    </div>
   </header>
 <main>
-    <section class="container">
+    <section class="section">
     <!-- Кнопки -->
-    <div class="portfolio-menu">
-        <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="portfolio-menu-list">
-            <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Все</button></li>
-            <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Веб-сайты</button></li>
-            <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Приложения</button></li>
-            <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Дизайн</button></li>
-            <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Маркетинг</button></li>
-        </ul>
-    </div>
+        <div class="container">
+            <h1 class="visually-hidden">Портфолио</h1>
+            <ul class="portfolio-menu-list">
+                <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Все</button></li>
+                <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Веб-сайты</button></li>
+                <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Приложения</button></li>
+                <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Дизайн</button></li>
+                <li class="portfolio-menu-item"><button class="portfolio-menu-button" type="button">Маркетинг</button></li>
+            </ul>
     <!-- Главный контент портфолио-->
-    <div class="portfolio">
-        <ul class="portfolio-list">
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/technokriak.jpg" alt="Три создателя веб-сайта на мониторе ноутбука" width="370"/>
-                    <h2 class="portfolio-list-title">Технокряк</h2>
-                    <p class="portfolio-list-text">Веб-сайт</p>
-                </a>
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/new-orlean-vs-golden-star.jpg" alt="Два баскетболиста борятся за мяч" width="370"/>
-                    <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="portfolio-list-text">Дизайн</p>
-                </a>
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/seafood.jpg" alt="Серая рыба с логотипом ресторана" width="370"/>
-                    <h2 class="portfolio-list-title">Ресторан Seafood</h2>
-                    <p class="portfolio-list-text">Приложение</p>
-                </a>   
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/prime.jpg" alt="Чёрные наушники на белом фоне" width="370"/>
-                    <h2 class="portfolio-list-title">Проект Prime</h2>
-                    <p class="portfolio-list-text">Маркетинг</p>
-                </a>
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/boxes.jpg" alt="Две коробки на белом фоне" width="370"/>
-                    <h2 class="portfolio-list-title">Проект Boxes</h2>
-                    <p class="portfolio-list-text">Приложение</p>
-                </a>
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/inspiration-has-no-borders.jpg" alt="Меню веб-сайта на чёрном мониторе" width="370"/>
-                    <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
-                    <p class="portfolio-list-text">Веб-сайт</p>
-                </a>
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/limited-edition.jpg" alt="Развёрнутый журнал" width="370"/>
-                    <h2 class="portfolio-list-title">Издание Limited Edition</h2>
-                    <p class="portfolio-list-text">Дизайн</p>
-                </a>
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/lab.jpg" alt="Белая бирка с чёрной надписью на бежевой верёвке" width="370"/>
-                    <h2 class="portfolio-list-title">Проект LAB</h2>
-                    <p class="portfolio-list-text">Маркетинг</p>
-                </a>
-            </li>
-            <li class="portfolio-list-item">
-                <a class="potfolio-list-link" href="#">
-                    <img src="./images/growing-business.jpg" alt="Меню приложения на нетбуке" width="370"/>
-                    <h2 class="portfolio-list-title">Growing Business</h2>
-                    <p class="portfolio-list-text">Приложение</p>
-                </a>
-            </li>
-        </ul>
-    </div>
+            <ul class="portfolio-list">
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/technokriak.jpg" alt="Три создателя веб-сайта на мониторе ноутбука" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Технокряк</h2>
+                            <p class="portfolio-list-text">Веб-сайт</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/new-orlean-vs-golden-star.jpg" alt="Два баскетболиста борятся за мяч" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="portfolio-list-text">Дизайн</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/seafood.jpg" alt="Серая рыба с логотипом ресторана" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Ресторан Seafood</h2>
+                            <p class="portfolio-list-text">Приложение</p>
+                        </div>
+                    </a>   
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/prime.jpg" alt="Чёрные наушники на белом фоне" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Проект Prime</h2>
+                            <p class="portfolio-list-text">Маркетинг</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/boxes.jpg" alt="Две коробки на белом фоне" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Проект Boxes</h2>
+                            <p class="portfolio-list-text">Приложение</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/inspiration-has-no-borders.jpg" alt="Меню веб-сайта на чёрном мониторе" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
+                            <p class="portfolio-list-text">Веб-сайт</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/limited-edition.jpg" alt="Развёрнутый журнал" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Издание Limited Edition</h2>
+                            <p class="portfolio-list-text">Дизайн</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/lab.jpg" alt="Белая бирка с чёрной надписью на бежевой верёвке" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Проект LAB</h2>
+                            <p class="portfolio-list-text">Маркетинг</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="portfolio-list-item">
+                    <a class="potfolio-list-link" href="#">
+                        <img src="./images/growing-business.jpg" alt="Меню приложения на нетбуке" width="370"/>
+                        <div class="portfolio-list-inscription">
+                            <h2 class="portfolio-list-title">Growing Business</h2>
+                            <p class="portfolio-list-text">Приложение</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </section>
 </main>
     <!-- Футер -->
     <footer class="footer-container">
-        <div class="footer-container-data">
+        <div class="container">
             <a class="footer-logo" href="#"><span class="logo-blue">Web</span><span class="logo-white">Studio</span></a>
             <address>
-                <ul class="footer-contacts-list">
-                    <li class="footer-item"><a class="footer-contacts-link" href="https://goo.gl/maps/HXGFn4gWA6E6knC27">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <ul>
+                    <li class="footer-item"><a class="footer-contacts-address" href="https://goo.gl/maps/HXGFn4gWA6E6knC27">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="footer-item"><a class="footer-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li class="footer-item"><a class="footer-contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
